...
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
...
                android:gravity="center_vertical"
                android:text="Email"
                android:textColor="@color/brown"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editusername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:backgroundTint="@color/brown"
                android:ems="15"
                android:inputType="text"
...
                android:gravity="center_vertical"
                android:text="Password"
                android:textColor="@color/brown"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:backgroundTint="@color/brown"
                android:ems="15"
                android:inputType="textPassword" />
...
