...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- FragmentContainerView to hold the map fragment -->
        <androidx.fragment.app.FragmentContainerView
            android:layout_marginTop="100dp"
            android:id="@+id/mapFragmentContainer"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_marginTop="15dp"
...
