<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    tools:context=".FriendsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:elevation="@dimen/cardview_default_elevation"
        android:theme="@style/Theme.Project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/navbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/makeGroupText"
        android:layout_width="301dp"
        android:layout_height="76dp"
        android:text="Creating a new group..."
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/brown"
        android:text="back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/brown"
        android:text="submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="76dp"
        android:layout_marginBottom="136dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.133"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="Group Name"
            android:textColor="@color/brown"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/groupNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:backgroundTint="@color/brown"
            android:ems="15"
            android:inputType="text"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="366dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.468"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/trailName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="Trail Name"
            android:textColor="@color/brown"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/trailNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:backgroundTint="@color/brown"
            android:ems="15"
            android:inputType="text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="136dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeGroupText"
        app:layout_constraintVertical_bias="0.448"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="Capacity"
            android:textColor="@color/brown"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/capacityInput"
            android:layout_width="8dp"
            android:layout_height="50dp"
            android:layout_weight=".9"
            android:backgroundTint="@color/brown"
            android:ems="15"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="203dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="171dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.468"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center_vertical"
                android:text="Date"
                android:textColor="@color/brown"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:ems="10"
                android:focusable="true"
                android:gravity="center_vertical"
                android:inputType="date"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.468"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/time"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center_vertical"
                android:text="Time"
                android:textColor="@color/brown"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/timeInput"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:ems="10"
                android:focusable="true"
                android:gravity="center_vertical"
                android:inputType="time"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>